objects/ASI_MFM_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Team_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Team__c</fullName>
        <label>Team</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>ASI_MFM_Team__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_MFM_CN_Project_Team</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Team__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_MFM_CN_Brand_Team</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Team__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TM-{00000000}</displayFormat>
        <label>Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Team_Member</fullName>
        <active>true</active>
        <label>CN Team Member</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>